--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "2.1621.0",
     "axios": "1.6.8",
     "dotenv": "16.4.5",
-    "express": "4.19.2"
+    "express": "4.19.2",
+    "sharp": "0.33.4"
   }
 }
