--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "1.6.8",
     "dotenv": "16.4.5",
     "express": "4.19.2",
+    "puppeteer": "22.10.0",
     "sharp": "0.33.4"
   }
 }
