--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "16.4.5",
     "express": "4.19.2",
     "puppeteer": "22.10.0",
-    "sharp": "0.33.4"
+    "sharp": "0.33.4",
+    "uuid": "10.0.0"
   }
 }
