--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "axios": "1.6.8",
     "dotenv": "16.4.5",
     "express": "4.19.2",
+    "fluent-ffmpeg": "2.1.3",
+    "microsoft-cognitiveservices-speech-sdk": "1.38.0",
+    "openai": "4.53.2",
     "puppeteer": "22.10.0",
     "sharp": "0.33.4",
     "uuid": "10.0.0"
