--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "openai": "4.53.2",
     "puppeteer": "22.10.0",
     "sharp": "0.33.4",
+    "user-agents": "1.1.314",
     "uuid": "10.0.0"
   }
 }
