--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start pm2-config.json && pm2 logs zeely-ad-video-builder"
+    "start": "pm2 start pm2-config.json && pm2 logs zeely-ad-video-builder",
+    "video:processed": "node ./src/processed_videos.js"
   },
   "author": "",
   "license": "ISC",
