--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fluent-ffmpeg": "2.1.3",
     "he": "1.2.0",
     "microsoft-cognitiveservices-speech-sdk": "1.38.0",
+    "mp3-duration": "1.1.0",
     "openai": "4.53.2",
     "puppeteer": "22.10.0",
     "sharp": "0.33.4",
